fix avt stretching in profile component

--- a/src/components/ProductCard/productscard.module.css
+++ b/src/components/ProductCard/productscard.module.css
@@ -5,9 +5,11 @@
 .title {
   font-size: 1rem;
 }
-
+.card-hover {
+  transition: all 0.3s ease;
+}
 .card-hover:hover {
-  box-shadow: 0 0 1px 1px rgb(195, 195, 195);
+  box-shadow: 0 0 3px 3px rgb(195, 195, 195);
 }
 
 .body-end {
